--- a/README.rdoc
+++ b/README.rdoc
@@ -36,7 +36,7 @@ Howdy enables "how" binary in your system. If for example you want to know what 
   future version unintentionally.
 * Commit, do not mess with rakefile, version, or history.
   (if you want to have your own version, that is fine but
-   bump version in a commit by itself I can ignore when I pull)
+* bump version in a commit by itself I can ignore when I pull)
 * Send me a pull request. Bonus points for topic branches.
 
 == Copyright
