added contributors section

--- a/README.rdoc
+++ b/README.rdoc
@@ -29,6 +29,9 @@ Howdy enables "how" binary in your system. If for example you want to know what 
  * http://dict.pl
  * http://ling.pl
 
+= Contributors:
+ * Paweł Pacana http://github.com/pawelpacana
+
 == Note on Patches/Pull Requests
  
 * Fork the project.
