added TODO point

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 * dict.org support
+* wordreference.com support
 * play pronunciation mp3 files (http://howjsay.com)
 * interactive dictionary choice
