added TODO point

--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 * wordreference.com support
 * play pronunciation mp3 files (http://howjsay.com)
 * interactive dictionary choice
+* support for coloring output
