--- a/README.rdoc
+++ b/README.rdoc
@@ -4,7 +4,6 @@ Dead easy command line dictionary.
 
 = Installation
 
-    gem sources -a http://gemcutter.org
     gem install howdy
 
 = Description
@@ -18,14 +17,13 @@ Howdy enables "how" binary in your system. If for example you want to know what 
     2.showing or characterized by awe.
     3.Slang. very impressive: That new white convertible is totally awesome. 
 
-    $ how -c 
+    $ how -c awesome 
     
     1. dictionary.com - English dictionary
     2. urbandictionary.com - Slang dictionary
     3. dict.pl - Polish-English dictionary
     4. ling.pl - Polish-English dictionary
     Choose [1..4]: 3
-    Seach in dict.pl: awesome
     
     fantastyczny; zachwycający; niesamowity
 
