--- a/TODO
+++ b/TODO
@@ -2,4 +2,4 @@
 * wordreference.com support
 * play pronunciation mp3 files (http://howjsay.com)
 * support for coloring output
-* http://highline.rubyforge.org
+* http://highline.rubyforge.org or termios
